# video-game-client

./: .gitignore  Dockerfile  README.md  app.yaml  docker-compose.yml  pyproject.toml
video_game_client/: development.ini  entrypoint.py
video_game_client/api/: views.py
video_game_client/static/: app.js
video_game_client/templates/: index.jinja2
